--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body data-page="home">
 <header class="header">
   <nav class="nav">
-    <div class="brand"><span class="logo"></span> <span>Registrar Hub</span></div>
+    <div class="brand"> <img src="assets/img/logo/logo.png" alt="Registrar Hub logo" class="logo" /> <span>Registrar Hub</span> </div>
     <a href="index.html" class="nav-link">Home</a>
     <a href="requests.html" class="nav-link">Requests</a>
     <a href="records.html" class="nav-link">Student Records</a>
