--- a/announcements.html
+++ b/announcements.html
@@ -4,16 +4,37 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Registrar Hub — Announcements</title>
-  <link rel="stylesheet" href="assets/css/styles.css"/>
+
+  <!-- Use the same main stylesheet as index.html -->
+  <link rel="stylesheet" href="assets/css/style.css"/>
+
+  <!-- Small inline rule to ensure the logo displays/sizes even if stylesheet hasn't loaded yet -->
+  <style>
+    .brand img.logo {
+      height: 36px;
+      width: 36px;
+      object-fit: contain;
+      margin-right: 8px;
+      vertical-align: middle;
+      display: inline-block;
+    }
+    .brand { display: inline-flex; align-items: center; gap: 8px; font-weight:700; }
+    /* Minimal layout fallback so the page is readable if style.css doesn't load */
+    body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; margin: 0; padding: 0; background: #f6f7fb; color:#111; }
+    .nav { display:flex; flex-wrap:wrap; gap:8px; padding:10px 16px; align-items:center; }
+    .spacer { flex:1; }
+    .container { max-width: 1200px; padding: 20px; margin: 0 auto; }
+  </style>
 </head>
 <body data-page="announcements">
 <header class="header">
   <nav class="nav">
     <div class="brand">
-      <!-- Logo image added so it always displays on this page -->
-      <img src="assets/logo/logo.png" alt="Registrar Hub logo" class="logo" style="height:28px; width:auto; margin-right:8px; vertical-align:middle;" />
+      <!-- Confirmed path: assets/logo/logo.png -->
+      <img src="assets/logo/logo.png" alt="Registrar Hub logo" class="logo" width="36" height="36" />
       <span>Registrar Hub</span>
     </div>
+
     <a href="index.html" class="nav-link">Home</a>
     <a href="requests.html" class="nav-link">Requests</a>
     <a href="records.html" class="nav-link">Student Records</a>
@@ -23,7 +44,9 @@
     <a href="faq.html" class="nav-link">FAQ</a>
     <a href="contact.html" class="nav-link">Contact</a>
     <a href="calendar.html" class="nav-link">Calendar</a>
+
     <div class="spacer"></div>
+
     <div class="searchbar"><span>🔎</span><input id="globalSearch" type="search" placeholder="Search…"/></div>
     <button id="themeToggle" class="icon-btn" title="Toggle theme">🌙 Dark</button>
   </nav>
