--- a/index.html
+++ b/index.html
@@ -1,33 +1,9 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Registrar Hub — Home</title>
-  <link rel="stylesheet" href="assets/css/style.css"/>
-  <!-- Small inline rule to ensure the logo displays and sizes nicely.
-       You can move this into your stylesheet (assets/css/style.css) if you prefer. -->
-  <style>
-    .brand img.logo {
-      height: 36px;
-      width: 36px;
-      object-fit: contain;
-      margin-right: 8px;
-      vertical-align: middle;
-      display: inline-block;
-    }
-    /* Optional: keep brand text vertically centered */
-    .brand { display: inline-flex; align-items: center; gap: 8px; }
-  </style>
-</head>
-<body data-page="home">
+<html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Registrar Hub — Announcements</title><link rel="stylesheet" href="assets/css/style.css"/></head>
+<body data-page="announcements">
 <header class="header">
   <nav class="nav">
-    <div class="brand">
-      <!-- Updated src to match the path you used -->
-      <img src="assets/logo/logo.png" alt="Registrar Hub logo" class="logo" width="36" height="36" />
-      <span>Registrar Hub</span>
-    </div>
+    <div class="brand"><span class="logo"></span> <span>Registrar Hub</span></div>
     <a href="index.html" class="nav-link">Home</a>
     <a href="requests.html" class="nav-link">Requests</a>
     <a href="records.html" class="nav-link">Student Records</a>
